<resources>
    <string name="app_name">WeatherApp-Alpha</string>
    <string name="city_country">Sunnyside, Pretoria</string>
    <string name="date_today">Friday, 8 July</string>
    <string name="current_temperature">26</string>
    <string name="weather_information">Partly Cloud</string>
    <string name="temp_information">26, partly cloudy</string>
    <string name="wind">WIND</string>
    <string name="wind_speed">18 km/h</string>
    <string name="humidity">HUMIDITY</string>
    <string name="humidity_rate">73%</string>
    <string name="day_of_week">Mon</string>
    <string name="location_hints">Type city or postcode</string>
    <string name="location_example">Example Midrand, Johannesburg</string>
    <string name="add_new_location">Add new location</string>
    <string name="stored_location">You can only store 5 locations</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="go_to_location">Go to location setting</string>
    <string name="todo">TODO</string>
</resources>
